tests/baselines/reference/genericSetterInClassType.errors.txt
genericSetterInClassType.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== genericSetterInClassType.ts (1 errors) ====
    module Generic {
           ~~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        class C<T> {
            get y(): T {
                return 1 as never;
            }
            set y(v) { }
        }
    
        var c = new C<number>();
        c.y = c.y;
    
        class Box<T> {
            #value!: T;
            
            get value() {
                return this.#value;
            }
        
            set value(value) {
                this.#value = value;
            }
        }
        
        new Box<number>().value = 3;
    }